# amqpcpp

./: CMakeLists.txt
examples/: example_consume.cpp  example_get.cpp  example_publish.cpp
include/: AMQPcpp.h
src/: AMQPBase.cpp  AMQPException.cpp  AMQPExchange.cpp  AMQPQueue.cpp
